# NOTEBOOKLM_API

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  __main__.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
docker/: Dockerfile
notebookLM-MCP-CLI/: CHANGELOG.md  README.md  pyproject.toml
notebookLM-MCP-CLI/docs/: API_REFERENCE.md  AUTHENTICATION.md  CLI_GUIDE.md  MCP_CLI_TEST_PLAN.md  MCP_GUIDE.md
notebookLM-MCP-CLI/src/notebooklm_tools/: __init__.py
notebookLM-MCP-CLI/src/notebooklm_tools/cli/: ai_docs.py  main.py  utils.py
notebookLM-MCP-CLI/src/notebooklm_tools/core/: auth.py  base.py  constants.py  research.py  sources.py  studio.py  utils.py
notebookLM-MCP-CLI/src/notebooklm_tools/mcp/: server.py
notebookLM-MCP-CLI/src/notebooklm_tools/services/: errors.py  exports.py  sources.py  studio.py
notebookLM-MCP-CLI/src/notebooklm_tools/utils/: cdp.py  config.py
notebookLM-MCP-CLI/tests/: test_auth_migration.py
notebookLM-MCP-CLI/tests/services/: test_sources.py
scripts/: start.sh
src/: __init__.py  config.py
src/api/: __init__.py  main.py
src/api/routes/: __init__.py  health.py  notebooks.py  notes.py  research.py  sharing.py  sources.py  studio.py
src/api/schemas/: __init__.py  notebooks.py  sources.py  studio.py
src/bot/: __init__.py  keyboards.py  main.py  middleware.py
src/bot/handlers/: __init__.py  auth.py  callbacks.py  chat.py  notebooks.py  start.py
src/core/: __init__.py  client.py  exceptions.py
tests/: __init__.py  test_api.py
(+10 files in other folders)
